# polymarket-cli

./: README.md  pyproject.toml
src/polymarket_cli/: cache.py  main.py
src/polymarket_cli/api/: clob.py  gamma.py  subgraph.py
src/polymarket_cli/commands/: backtest.py  cache_cmd.py  recommend.py  serve.py  whales.py
src/polymarket_cli/display/: format.py  tables.py
src/polymarket_cli/strategies/: __init__.py  base.py  composite.py  cross_market.py  mean_reversion.py  momentum.py  regime.py  sma.py
src/polymarket_cli/web/: server.py
src/polymarket_cli/web/static/: index.html
tests/: test_cache.py  test_strategies.py
