[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-cli"
version = "0.1.0"
description = "A read-only terminal CLI for Polymarket prediction markets, with quant trade signals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Josh Lin" }]
keywords = ["polymarket", "prediction-markets", "cli", "trading", "terminal"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/jlinnnn/polymarket-cli"

[project.scripts]
polymarket = "polymarket_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_cli"]
